--- a/app/views/movies/edit.html.haml
+++ b/app/views/movies/edit.html.haml
@@ -7,6 +7,9 @@
   = label :movie, :title, 'Title'
   = text_field :movie, 'title'
 
+  = label :movie, :description, 'Description'
+  = text_area :movie, 'description'
+
   = label :movie, :rating, 'Rating'
   = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
 
