--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -2,12 +2,12 @@
 %h1 All Movies
 Ian Guy
 
-= form_tag movies_path, :method => :get do
+= form_tag movies_path, :method => :get, :id => :ratings_form do
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]"
-  = submit_tag 'Refresh'
+    = check_box_tag "ratings[#{rating}]", 1, true
+  = submit_tag 'Refresh', :id => :ratings_submit
   
 %table#movies
   %thead
