--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -6,15 +6,15 @@ Ian Guy
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", 1, true
+    = check_box_tag "ratings[#{rating}]", 1, (session[:ratings].key?(rating)), :id => "ratings_#(rating)"
   = submit_tag 'Refresh', :id => :ratings_submit
   
 %table#movies
   %thead
     %tr
-      %th{id: :title_header, class: (params[:sortby] == 'title') ? :hilite : :nil}= link_to 'Movie Title', movies_path(sortby: :title)
+      %th{id: :title_header, class: (session[:sortby] == 'title') ? :hilite : :nil}= link_to 'Movie Title', movies_path(sortby: :title)
       %th Rating
-      %th{id: :release_date_header, class: (params[:sortby] == 'date') ? :hilite : :nil}= link_to 'Release Date', movies_path(sortby: :date)
+      %th{id: :release_date_header, class: (session[:sortby] == 'date') ? :hilite : :nil}= link_to 'Release Date', movies_path(sortby: :date)
       %th More Info
   %tbody
     - @movies.each do |movie|
